    Thanks to Ian Jackson.
  * Allow compilation with --disable-nls on systems without libintl.h where
    a non glibc claims to be glibc. Closes: #465420
  * Fix crash when a .deb file becomes unreadable while dpkg is starting.
    Thanks to Ian Jackson. Closes: #386210
  * Few file descriptor cleanup and error handling fixes.
    Thanks to Ian Jackson. Closes: #443338

  [ Raphael Hertzog ]
  * Add a warning displayed by dpkg-genchanges if the current version is
    smaller than the previous one. Closes: #4655
  * Add -d and -c options in dpkg-checkbuilddeps to override
    build-depends/conflicts. Closes: #114774
  * Include list of libraries in dpkg-gensymbols' warning about new/lost
    libraries.
  * Add -R option to dpkg-buildpackage so that one can replace the usual
    "debian/rules" by something else. Closes: #355654
  * Always list all binary packages in the Description: field of .changes
    files. It's nice for reviewers and mentors.debian.net was using this field
    on source only uploads to display short description of what the package is
    about.
  * Handle the case when the library has a different SONAME than the one used
    to find it. Closes: #462413
  * Fix Dpkg::Version and Dpkg::Fields::Object to import _g() from
    Dpkg::Gettext. Thanks to Adam Heath and Olivier Berger for spotting
    this. Closes: #465651
  * Change PATH during make check to look into build directories containing
    dpkg and the related scripts. Thanks to Mike Frysinger. Closes: #466957
  * Some lintian cleanup:
    - add overrides for some useless I: tags
    - drop unused overrides
    - updated several manual pages to fix hyphen-used-as-minus-sign
    - fixed manpage-has-errors-from-man in several manual pages
    - removed empty debian/dpkg.prerm
  * Removed old upgrade code from dpkg's preinst and postinst which only
    concerns upgrading from dpkg version older than the one in oldstable
    already. And thus we get rid of old the last usage of read in those