@@ -31,6 +31,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     Thanks to Ian Jackson. Closes: #386210
   * Few file descriptor cleanup and error handling fixes.
     Thanks to Ian Jackson. Closes: #443338
+  * Move test suite invokation to a new check target in debian/rules.
 
   [ Raphael Hertzog ]
   * Add a warning displayed by dpkg-genchanges if the current version is
